logs/products.atextensions.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ATExtensions'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/Extensions'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/datatype'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/examples'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/field'...
Compiling './lib/python3.5/site-packages/Products/ATExtensions/field/record.py'...
***   File "./lib/python3.5/site-packages/Products/ATExtensions/field/record.py", line 129
    raise AttributeError, 'no vocabulary found for %s' %subfield
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/ATExtensions/i18n'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/profiles'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/profiles/default'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/profiles/demotypes'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/profiles/demotypes/types'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/skins'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions'...
Compiling './lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/emailMask.py'...
***   File "./lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/emailMask.py", line 14
    return emailaddress.replace('@',' at ')
                                          ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/formatdemo.py'...
***   File "./lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/formatdemo.py", line 18
    print n1
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/getDisplayView.py'...
***   File "./lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/getDisplayView.py", line 11
    return value
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/ATExtensions/validator'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/widget'...
Compiling './lib/python3.5/site-packages/Products/ATExtensions/widget/smartemail.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (smartemail.py, line 55)
Listing './lib/python3.5/site-packages/Products.ATExtensions-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
